# furocya-tohenkan

./: .dockerignore  .gitignore  Digraph.gv  Dockerfile  Pipfile  README.md  data.c  docker-compose.yml  fonts.conf  main.py  package-lock.json  package.json  pyproject.toml  test.py  test2.py  test3.py  test4.py
.github/workflows/: deploy.yml
api/: main.py
api/routes/: download.py  upload.py  view.py
api/services/: convert.py
electron/: main.js  preload.js
furohen/_node/: __init__.py  dismatle.py  print_nodes.py
furohen/convert/: __init__.py  convert.py  format_to_str.py
furohen/core/: build.py  make.py
furohen/exceptions/: __init__.py  ast_type_exception.py
furohen/models/: __init__.py
furohen/models/entries/: flow_context.py  node.py
furohen/models/enums/: shape.py
furohen/output/: render.py
furohen/utils/: __init__.py  file.py  log_config.py  read.py
test_data/: do.c  for.c  func.c  if.c  point.c  printf.c  scanf.c  switch.c  test.c  while.c  ポインタ.c
web/: index.html
