[project]
name = "furocya-tohenkan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "graphviz>=0.21",
    "pycparser>=2.23",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
    "vsdx>=0.5.19",
]
